2008-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* network_5200/network.c: Remove use of boolean.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h, startup/bspclean.c: Review of all bsp_cleanup()
	implementations. In this phase, all prototypes were removed from
	bsp.h and empty implementations were removed and made to use the
	shared stub.

2008-09-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* i2c/i2c.c: Remove rtems_boolean having crept in again.

2008-09-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/mscan-base.h: Added bit timing macros.

2008-09-08      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* i2c/i2c.c, i2c/i2cdrv.c, i2c/mpc5200mbus.c, i2c/mpc5200mbus.h,
	include/i2c.h:
	converted done_arg to a void pointer 
	
2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bestcomm/bestcomm_glue.c, ide/pcmcia_ide.c, tod/todcfg.c:
	Convert to "bool".

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* i2c/i2c.c, i2c/i2cdrv.c: Convert to "bool".

2008-09-04	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/mscan-base.h, mscan/mscan-base.c, mscan/mscan.c,
	mscan/mscan_int.h: Improved parameter checks for bit rate function.

2008-09-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, bestcomm/load_task.c,
	bestcomm/task_api/tasksetup_general.h: Eliminate requirement to build
	bestcomm as a relocatable lump. This should reduce the minimum
	footprint considerably.

2008-09-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* irq/irq.h, irq/irq_asm.h, irq/irq_init.c, vectors/vectors.S,
	vectors/vectors.h, vectors/vectors_init.c: Removed files.

	* include/irq-config.h, include/irq.h, include/mscan-base.h,
	mscan/mscan-base.c, startup/linkcmds.base: New files.

	* mscan/mscan.c, mscan/mscan_int.h: Moved general MSCAN functions into
	separate header and source files (include/mscan-base.h and
	mscan/mscan-base.c).  Formatted code.
