@@ -1,3 +1,10 @@
+2008-09-15	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, startup/bspstart.c: Use shared bsp_get_work_area() in
+	its own file and rely on BSP Framework to perform more
+	initialization.
+	* startup/bspgetworkarea.c: New file.
+
 2008-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* network_5200/network.c: Remove use of boolean.
